# blind-charging-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml  release.yml  research.yml
app/: logo.py
app/schema/: docs.html  openapi.yaml
app/server/: README.md  app.py  case.py  case_helper.py  config.py  extracted_report.py  features.py  meta.py
app/server/handlers/: extraction.py  redaction.py
app/server/store/: redis.py
app/server/tasks/: __init__.py  callback.py  controller.py  extract.py  extract_callback.py  fetch.py  finalize.py  format.py  http.py  redact.py  usage.py
cli/: cli.py  provision.py
docs/: index.html  openapi.yaml
docs/diagrams/blind-charging-api-reference/: README.md  data-flow.mmd  functional.mmd  system-network.mmd
scripts/: generate_api_docs.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  app.tf  app_config.tf  certificate.tf  db.tf  gateway.tf  key_vault.tf  main.tf  monitor.tf  net.tf  redis.tf  research_env.tf  vars.tf
terraform/backend/: configure.sh  fetch-tfvars.sh  first-time-setup.sh  init.sh  save-tfvars.sh
terraform/research/: pyproject.toml
tests/integration/: test_extract.py  test_health.py  test_redact.py  testutil.py
tests/load/: README.md  docker-compose.load.yml  run_load.py
tests/unit/: test_app.py  test_batch_experiment.py  test_callback.py  test_case.py  test_case_helper.py  test_extracted_report.py  test_fetch.py  test_finalize.py  test_format.py  test_redact.py  test_redact_handler.py  test_usage.py
