[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
]
requires-python = "<4.0,>=3.14"
dependencies = [
    "aiohttp>=3.13.5,<4.0.0",
    "fastapi[standard]<1.0.0,>=0.115.0",
    "pyjwt>=2.12.1,<3.0.0",
    "pydantic<3.0.0,>=2.7.1",
    "sqlalchemy>=2.0.49,<3.0.0",
    "pyodbc>=5.3.0,<6.0.0",
    "aioodbc<1.0.0,>=0.5.0",
    "python-glowplug>=0.3.10",
    "typer>=0.24.1,<1.0.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "uuid-utils>=0.16.0",
    "greenlet>=3.5.0,<4.0.0",
    "gunicorn>=26.0.0",
    "uvicorn>=0.47.0,<1.0.0",
    "jinja2<4.0.0,>=3.1.4",
    "openai>=2.17",
    "aiosqlite<1.0.0,>=0.20.0",
    "nameparser<2.0.0,>=1.1.3",
    "redis<6.0.0,>=5.2.1",
    "azure-storage-blob<13.0.0,>=12.20.0",
    "urllib3>=2.7.0",
    "pytz==2026.1.post1",
    "flower<3.0.0,>=2.0.1",
    "argon2-cffi>=25.1.0,<26.0.0",
    "opentelemetry-sdk<2.0.0,>=1.27.0",
    "opentelemetry-api<2.0.0,>=1.27.0",
    "python-hcl2>=8.1.2,<9.0.0",
    "alembic>=1.13.3,<=2.0.0",
    "fakeredis>=2.24.1",
    "azure-monitor-opentelemetry>=1.8.8,<2.0.0",
    "opentelemetry-instrumentation-celery<1.0,>=0.49b1",
    "certifi>=2026.5.20,<2027.0.0",
    "alligater>=0.5.0,<1.0.0",
    "kombu @ git+https://github.com/jnu/kombu.git@a37798c43c740ac7bc8253915588f675e45bd04b",
    "celery>=5.6,<6.0.0",
    "tiktoken>=0.13.0",
    "bc2",
]
name = "blind-charging-api"
version = "0.13.0-beta.2"
description = "Race-blind Charging API"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pre-commit>=4.6.0,<5.0.0",
    "fakeredis<3.0.0,>=2.23.3",
    "pytest-asyncio==1.3.0",
    "pytest-celery>=1.3.0,<2.0.0",
    "responses>=0.26.0,<1.0.0",
    "alembic<2.0.0,>=1.13.2",
    "mypy>=2.1.0,<3.0.0",
]

[tool.ruff]
exclude = ["app/server/generated", "app/logo.py"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "C", "W", "B"]

[tool.mypy]
strict = false # TODO(jnu): Set to true when we fix all the errors
ignore_missing_imports = true
exclude = "^(alembic)"

[[tool.mypy.overrides]]
module = "app.server.generated.models"
ignore_errors = true

[tool.uv.sources]
bc2 = { git = "https://github.com/comppolicylab/bc2.git" }
