[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "alligater @ git+https://github.com/comppolicylab/alligater.git",
    "bc2 @ git+https://github.com/comppolicylab/bc2.git",
]
name = "research"
version = "0.1.0"
description = "Python research environment"
readme = "README.md"
